--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ body {
   overflow-x: hidden;
 }
 
+
+.test{
+   background-color: red ;
+   font-size: 50px;
+}
+
+
 h1 {
   font-size: 2.5em;
   margin-bottom: 0.5em;
