feat: mejorar estilo de entrada con color de fondo y propiedades importantes

--- a/style.css
+++ b/style.css
@@ -182,8 +182,9 @@ input {
     padding: 0.5em 1em;
     box-shadow: none;
     border-bottom: 4px solid white;
-    font-size: 200px;
-    color: red
+    font-size: 200px !important;
+    color: red;
+    background-color: #00c853 !important  ;
   }
 }
 
